--- a/IssueWorklogger.lpi
+++ b/IssueWorklogger.lpi
@@ -30,7 +30,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="IssueWorklogger.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -52,6 +52,12 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="WorkloggerService"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="src/workloglist.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FrmLogList"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
