chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -66,13 +66,11 @@ Android/
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
 
-# Boss dependency manager vendor folder https://github.com/HashLoad/boss
-modules/
-
 # Lazarus
 backup/
 lib/
 *.lps
 
 
-build/
+build/IssueWorklog
+build/worklogs/*
