--- a/IssueWorklogger.lpi
+++ b/IssueWorklogger.lpi
@@ -56,6 +56,7 @@
         <Filename Value="src/workloglist.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FrmLogList"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit4>
     </Units>
@@ -71,9 +72,6 @@
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
-      <Debugging>
-        <GenerateDebugInfo Value="False"/>
-      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
